tests/snapshots/conformance_golden_suite__golden_work_order_passthrough_mode.snap
---
source: tests/conformance_golden_suite.rs
expression: wo
---
{
  "id": "a1a2a3a4-a5a6-a7a8-a9aa-abacadaeafb0",
  "task": "Refactor auth module",
  "lane": "patch_first",
  "workspace": {
    "root": "/workspace",
    "mode": "pass_through",
    "include": [
      "src/**/*.rs"
    ],
    "exclude": [
      "target/**"
    ]
  },
  "context": {
    "files": [
      "src/main.rs"
    ],
    "snippets": [
      {
        "name": "instructions",
        "content": "Focus on error handling"
      }
    ]
  },
  "policy": {
    "allowed_tools": [
      "Read",
      "Write"
    ],
    "disallowed_tools": [
      "Bash"
    ],
    "deny_read": [
      "**/.env"
    ],
    "deny_write": [
      "**/.git/**"
    ],
    "allow_network": [],
    "deny_network": [
      "*.internal"
    ],
    "require_approval_for": [
      "Delete"
    ]
  },
  "requirements": {
    "required": [
      {
        "capability": "streaming",
        "min_support": "native"
      }
    ]
  },
  "config": {
    "model": "gpt-4o",
    "vendor": {},
    "env": {},
    "max_budget_usd": 1.0,
    "max_turns": 10
  }
}
